--- a/PyTorchLearning.ipynb
+++ b/PyTorchLearning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN46MBpPf5ehcf0S4DrbPlX",
+      "authorship_tag": "ABX9TyPJmDZlEYL/ypegk8m168AE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,30 +67,84 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "y = 2 * torch.dot(x, x)\n",
-        "y"
+        "y = 2 * torch.dot(x, x)"
+      ],
+      "metadata": {
+        "id": "OSvXoCBis8bX"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "通过反向传播函数来计算y关于x每个分量的梯度"
+      ],
+      "metadata": {
+        "id": "ri6jiXv1u7BY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y.backward()\n",
+        "x.grad"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "OSvXoCBis8bX",
-        "outputId": "674535a5-bbf2-40e9-e9d3-5b08f91720c2"
+        "id": "8G5rrTxBuv_t",
+        "outputId": "0515c3a2-e3e2-4ade-d517-9dda4469c0df"
       },
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor(28., grad_fn=<MulBackward0>)"
+              "tensor([ 0., 20., 40., 60.])"
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 16
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.grad == 4 * x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BaNkg4FbufE7",
+        "outputId": "f552a52e-cc4e-441b-c231-1d39adceca81"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ True, False, False, False])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yUoLneu9uk3g"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
