--- a/PyTorchLearning.ipynb
+++ b/PyTorchLearning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJmDZlEYL/ypegk8m168AE",
+      "authorship_tag": "ABX9TyPxtZRaTmxOf5Q7SdYnBvfj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -139,12 +139,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x.grad.zero_() # 梯度就是导数，PyTorch会累积梯度，再次使用前，需要将历史值清零\n",
+        "y = x.sum()\n",
+        "y.backward()\n",
+        "x.grad"
+      ],
       "metadata": {
-        "id": "yUoLneu9uk3g"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yUoLneu9uk3g",
+        "outputId": "da191d12-597b-47f1-942f-9652857e9c08"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1., 1., 1., 1.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     }
   ]
 }
